--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API for PicsArt Booking",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon ./src/index.js"
   },
   "repository": {
     "type": "git",
