--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "API for PicsArt Booking",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon ./src/index.js"
+    "start": "nodemon ./src/index.js",
+    "lint": "node ./node_modules/eslint/bin/eslint.js ./src --fix",
+    "precommit": "node ./node_modules/eslint/bin/eslint.js ./src"
   },
   "repository": {
     "type": "git",
@@ -12,6 +14,9 @@
   },
   "author": "",
   "license": "MIT",
+  "pre-commit": [
+    "precommit"
+  ],
   "bugs": {
     "url": "https://github.com/Picsart-Academy-UI/API/issues"
   },
@@ -20,5 +25,11 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "pre-commit": "^1.2.2"
   }
 }
