--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon ./src/index.js",
-    "lint": "node ./node_modules/eslint/bin/eslint.js ./src --fix",
+    "lint": "node ./node_modules/eslint/bin/eslint.js ./src",
+    "lint:fix": "node ./node_modules/eslint/bin/eslint.js ./src --fix",
     "precommit": "node ./node_modules/eslint/bin/eslint.js ./src"
   },
   "repository": {
