--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.4.17",
+    "picsart-booking-db-models": "^1.0.1"
   },
   "devDependencies": {
     "eslint": "^7.15.0",
