--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   },
   "homepage": "https://github.com/Picsart-Academy-UI/API#readme",
   "dependencies": {
+    "booking-db": "^1.0.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "nodemailer": "^6.4.17",
-    "picsart-booking-db-models": "^1.0.1"
+    "nodemailer": "^6.4.17"
   },
   "devDependencies": {
     "eslint": "^7.15.0",
