--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^7.15.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "nodemon": "^2.0.6",
     "pre-commit": "^1.2.2"
   }
 }
