initializing mocha and chai

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon ./src/index.js",
     "lint": "node ./node_modules/eslint/bin/eslint.js ./src",
     "lint:fix": "node ./node_modules/eslint/bin/eslint.js ./src --fix",
-    "precommit": "node ./node_modules/eslint/bin/eslint.js ./src"
+    "precommit": "node ./node_modules/eslint/bin/eslint.js ./src",
+    "test": "mocha ./src/test"
   },
   "repository": {
     "type": "git",
@@ -24,10 +25,12 @@
   "homepage": "https://github.com/Picsart-Academy-UI/API#readme",
   "dependencies": {
     "booking-db": "^1.0.5",
+    "chai": "^4.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.2.1",
     "nodemailer": "^6.4.17"
   },
   "devDependencies": {
