--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^8.2.1",
-    "nodemailer": "^6.4.17"
+    "nodemailer": "^6.4.17",
+    "supertest": "^6.0.1"
   },
   "devDependencies": {
     "eslint": "^7.15.0",
