--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
   },
   "homepage": "https://github.com/Picsart-Academy-UI/API#readme",
   "dependencies": {
+    "booking-db": "^1.0.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "google-auth-library": "^6.1.3",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.4.17",
-    "picsart-booking-db-models": "^1.0.1"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^7.15.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "pre-commit": "^1.2.2"
+    "eslint-plugin-import": "^2.22.1"
   }
 }
