--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
     "ecmaVersion": 12
   },
   "rules": {
+    "import/prefer-default-export": "off",
     "camelcase": "off",
     "no-underscore-dangle": "off",
     "comma-dangle": "off",
