changed some user logic also connected the new DB

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
     "ecmaVersion": 12
   },
   "rules": {
+    "object-curly-newline": "off",
     "consistent-return": "off",
     "padded-blocks": "off",
     "no-trailing-spaces": "off",
