--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "nodemon ./src/index.js",
     "lint": "node ./node_modules/eslint/bin/eslint.js ./src",
-    "lint:fix": "node ./node_modules/eslint/bin/eslint.js ./src --fix",
-    "precommit": "node ./node_modules/eslint/bin/eslint.js ./src"
+    "lint:fix": "node ./node_modules/eslint/bin/eslint.js ./src --fix"
   },
   "repository": {
     "type": "git",
@@ -15,9 +14,6 @@
   },
   "author": "",
   "license": "MIT",
-  "pre-commit": [
-    "precommit"
-  ],
   "bugs": {
     "url": "https://github.com/Picsart-Academy-UI/API/issues"
   },
