--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "nodemon ./src/index.js",
     "lint": "node ./node_modules/eslint/bin/eslint.js ./src",
-    "lint:fix": "node ./node_modules/eslint/bin/eslint.js ./src --fix",
-    "precommit": "node ./node_modules/eslint/bin/eslint.js ./src"
+    "lint:fix": "node ./node_modules/eslint/bin/eslint.js ./src --fix"
   },
   "repository": {
     "type": "git",
@@ -15,15 +14,12 @@
   },
   "author": "",
   "license": "MIT",
-  "pre-commit": [
-    "precommit"
-  ],
   "bugs": {
     "url": "https://github.com/Picsart-Academy-UI/API/issues"
   },
   "homepage": "https://github.com/Picsart-Academy-UI/API#readme",
   "dependencies": {
-    "booking-db": "^1.1.1",
+    "booking-db": "^1.2.2",
     "cors": "^2.8.5",
     "db_picsart": "^1.0.1",
     "dotenv": "^8.2.0",
@@ -37,7 +33,6 @@
     "eslint": "^7.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "nodemon": "^2.0.6",
-    "pre-commit": "^1.2.2"
+    "nodemon": "^2.0.6"
   }
 }
