--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "nodemon ./src/index.js",
     "lint": "node ./node_modules/eslint/bin/eslint.js ./src",
-    "lint:fix": "node ./node_modules/eslint/bin/eslint.js ./src --fix"
+    "lint:fix": "node ./node_modules/eslint/bin/eslint.js ./src --fix",
+    "precommit": "node ./node_modules/eslint/bin/eslint.js ./src",
+    "test": "mocha test"
   },
   "repository": {
     "type": "git",
@@ -19,14 +21,17 @@
   },
   "homepage": "https://github.com/Picsart-Academy-UI/API#readme",
   "dependencies": {
-    "booking-db": "^1.2.5",
+    "booking-db": "^1.2.8",
+    "chai": "^4.2.0",
     "cors": "^2.8.5",
     "db_picsart": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "google-auth-library": "^6.1.3",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.2.1",
     "nodemailer": "^6.4.17",
+    "supertest": "^6.0.1",
     "web-push": "^3.4.4"
   },
   "devDependencies": {
