--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "google-auth-library": "^6.1.3",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^8.2.1",
+    "moment-timezone": "^0.5.32",
     "nodemailer": "^6.4.17",
     "supertest": "^6.0.1",
     "web-push": "^3.4.4"
