--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       replicas: 2
       update_config: 
         parallelism: 1
-        deplay: 10s
+        delay: 10s
       restart_policy: 
         condition: on-failure
     links:
