--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
         condition: on-failure
     links:
       - mongo
+    depends_on:
+      - mongo
   mongo:
     container_name: mongo
     image: mongo
