--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
   },
   "homepage": "https://github.com/Picsart-Academy-UI/API#readme",
   "dependencies": {
-    "booking-db": "^1.2.8",
+    "booking-db": "^1.3.7",
     "chai": "^4.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "google-auth-library": "^6.1.3",
+    "google-auth-library": "^6.1.4",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^8.2.1",
+    "moment-timezone": "^0.5.32",
     "nodemailer": "^6.4.17",
     "supertest": "^6.0.1",
     "web-push": "^3.4.4"
@@ -37,6 +38,6 @@
     "eslint": "^7.17.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.7"
   }
 }
