--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3'
 services:
    mongo:
-    container_name: mongo
     image: mongo
     networks:
       backend_net:
@@ -15,21 +14,18 @@ services:
     volumes:
       - 'db:/data/db'
    api:
-    container_name: api
     image: lilitkarapetyan/academy-node:test
-    networks: 
+    networks:
       - backend_net
     ports:
       - '3001:3001'
     deploy:
       replicas: 4
-      update_config: 
+      update_config:
         parallelism: 1
         delay: 10s
-      restart_policy: 
+      restart_policy:
         condition: on-failure
-    links:
-      - mongo
     depends_on:
       - mongo
 
@@ -46,6 +42,26 @@ services:
      networks:
        - backend_net
        - frontend
+
+   alertmanager:
+    image: prom/alertmanager
+    volumes:
+      - /etc/alertmanager:/etc/alertmanager
+    command:
+      - '--config.file=/etc/alertmanager/config.yml'
+      - '--storage.path=/alertmanager'
+    restart: unless-stopped
+    ports:
+        - '9093:9093'
+    deploy:
+       placement:
+         constraints:
+           - node.role == manager
+    networks:
+       - backend_net
+       - frontend
+
+
    manager-001:
     image: prom/node-exporter
     volumes:
@@ -86,25 +102,25 @@ services:
      networks:
                 - backend_net
 
-   worker-002:       
-     image: prom/node-exporter       
-     volumes:       
-      - /proc:/host/proc:ro       
-      - /sys:/host/sys:ro       
-      - /:/rootfs:ro       
-     command:       
-        - '--path.procfs=/host/proc'       
-        - '--path.sysfs=/host/sys'       
-        - '--path.rootfs=/host'       
-        - '--collector.filesystem.ignored-mount-points="^(/rootfs|/host|)/(sys|proc|dev|host|etc)($$|/)"'       
-        - '--collector.filesystem.ignored-fs-types="^(sys|proc|auto|cgroup|devpts|ns|au|fuse\.lxc|mqueue)(fs|)$$"'       
-     deploy:       
-       placement:       
-          constraints:       
-         # hostname of the worker node!       
-                - node.hostname == docker-node-02       
-     networks:       
-                - backend_net    
+   worker-002:
+     image: prom/node-exporter
+     volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+     command:
+        - '--path.procfs=/host/proc'
+        - '--path.sysfs=/host/sys'
+        - '--path.rootfs=/host'
+        - '--collector.filesystem.ignored-mount-points="^(/rootfs|/host|)/(sys|proc|dev|host|etc)($$|/)"'
+        - '--collector.filesystem.ignored-fs-types="^(sys|proc|auto|cgroup|devpts|ns|au|fuse\.lxc|mqueue)(fs|)$$"'
+     deploy:
+       placement:
+          constraints:
+         # hostname of the worker node!
+                - node.hostname == docker-node-02
+     networks:
+                - backend_net
 
    docker-manager-001:
      image: google/cadvisor:latest
@@ -149,7 +165,7 @@ services:
           # hostname of the worker node!
            - node.hostname == docker-node-02
      networks:
-      - backend_net           
+      - backend_net
 
    grafana:
      image: grafana/grafana
@@ -169,9 +185,9 @@ services:
 networks:
         frontend:
                 external:
-                        name: imixs-proxy-net      
+                        name: imixs-proxy-net
         backend_net:
-          
+
 volumes:
   db:
   grafana-data:
