--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,8 @@
     "indent":"off",
     "arrow-body-style":"off",
     // the lines above should be removed
+    "one-var": "off",
+    "one-var-declaration-per-line": "off",
     "object-curly-spacing": "off",
     "object-curly-newline": "off",
     "consistent-return": "off",
