--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -195,6 +195,8 @@ services:
 
    reservationchecker:
     image: lilitkarapetyan/academy-node:test
+    networks:
+       - backend_net
     environment:
         - MONGO_URI=mongodb://mongo:27017/?readPreference=primary&appname=MongoDB%20Compass&ssl=false
     command: bash -c 'cd scripts && node check-reservations.script.js'
