--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.3",
     "google-auth-library": "^6.1.4",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^8.2.1",
