--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
   },
   "homepage": "https://github.com/Picsart-Academy-UI/API#readme",
   "dependencies": {
-    "booking-db": "^1.4.6",
+    "booking-db": "^1.4.7",
     "chai": "^4.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.3",
     "google-auth-library": "^6.1.4",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^8.2.1",
     "moment-timezone": "^0.5.32",
     "nodemailer": "^6.4.17",
+    "rate-limit-redis": "^2.0.0",
+    "redis": "^3.0.2",
     "supertest": "^6.1.1",
     "web-push": "^3.4.4"
   },
