chair test cases

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint:fix": "node ./node_modules/eslint/bin/eslint.js ./src --fix",
     "precommit": "node ./node_modules/eslint/bin/eslint.js ./src",
     "test": "mocha test --exit",
-    "test:only": "mocha ./test/_initial.test.js mocha ./test/$npm_config_file.test.js --exit"
+    "test:only": "mocha ./test/_initial.test.js ./test/$npm_config_file.test.js --exit"
   },
   "repository": {
     "type": "git",
