Handling utils & pretty code

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
       "object": true,
       "array": false
     }],
-    "no-unused-vars": "off"
+    "no-unused-vars": "off",
+    "no-mixed-operators": "off"
   }
 }
