--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -248,6 +248,14 @@ services:
     command: redis-server --appendonly yes
     networks:
       - backend_net
+  visualizer:
+    image: dockersamples/visualizer
+    networks:
+      - backend_net
+    volumes:
+    -  /var/run/docker.sock:/var/run/docker.sock
+    ports:
+      - "5000:8080"
 networks:
   frontend:
     external:
