--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -248,6 +248,18 @@ services:
     command: redis-server --appendonly yes
     networks:
       - backend_net
+  visualizer:
+    image: dockersamples/visualizer
+    ports:
+      - "5000:8080" 
+    networks:
+      - backend_net
+    deploy:
+      placement:
+        constraints:
+          - node.role == manager
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
 networks:
   frontend:
     external:
