--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,27 +9,18 @@
     "ecmaVersion": 12
   },
   "rules": {
-    // the below should be removed
-    "space-before-blocks": "off",
-    "eol-last":"off",
     "no-restricted-syntax":"off",
     "no-await-in-loop":"off",
-    "no-console":"off",
-    "no-multiple-empty-lines":"off",
-    "indent":"off",
-    "arrow-body-style":"off",
-    // the lines above should be removed
-    "one-var": "off",
-    "one-var-declaration-per-line": "off",
-    "object-curly-spacing": "off",
     "object-curly-newline": "off",
     "consistent-return": "off",
-    "padded-blocks": "off",
-    "no-trailing-spaces": "off",
-    "import/prefer-default-export": "off",
     "camelcase": "off",
     "no-underscore-dangle": "off",
     "comma-dangle": "off",
+    "no-param-reassign": "off",
+    "no-bitwise": "off",
+    "no-plusplus": "off",
+    "max-classes-per-file": "off",
+    "default-case": "off",
     "prefer-destructuring": ["error", {
       "object": true,
       "array": false
