--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API for PicsArt Booking",
   "main": "app.js",
   "scripts": {
-    "start": ". scripts/load_env.sh && node ./src/index.js",
+    "start": "./scripts/load_env.sh && node ./src/index.js",
     "lint": "node ./node_modules/eslint/bin/eslint.js ./src",
     "lint:fix": "node ./node_modules/eslint/bin/eslint.js ./src --fix",
     "precommit": "node ./node_modules/eslint/bin/eslint.js ./src",
